// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`corpus > README golden — '01-matrix-multi-config' 1`] = `
"# Converted Azure DevOps pipeline

A local, dependency-free bash rendering of an Azure DevOps pipeline, generated by \`azdo-emu\`.
Every stage, job and step below is a script you can read, edit, and run on its own.

- **Structure:** 1 stage, 7 jobs, 13 step scripts.
- **Expansion:** **service** — expanded by Azure DevOps (pipeline \`42\`, api-version \`7.1-preview.1\`, fresh).
- **Gaps:** 0 entries in [Warnings](#warnings); 0 unsupported constructs.

## Quick start

\`\`\`bash
cp .env.example .env    # then fill it in — see “Environment” below
./run.sh                # run every stage, in dependency order
./run.sh --list         # print the stage/job/step tree with fidelity labels
./run.sh --env-file F   # load F instead of ./.env
./run.sh --resume       # reuse the previous run number and its run directory
\`\`\`

Each run gets \`.work/run-<n>/\` — \`logs/\` per job, \`state/\` for results and output variables, and
\`workspace/\` as the checkout root. Published artifacts land in \`.artifacts/\`.

The per-stage and per-job scripts (\`run-stage.sh\`, \`run-job.sh\`) are sequenced by \`run.sh\` and
read the environment it exports; run them directly only with that environment in place.

See [.env.example](.env.example) for the values this pipeline needs.

## Pipeline

### Stage \`__default\`

- depends on: —
- condition: —
- runner: [\`stages/010-default/run-stage.sh\`](stages/010-default/run-stage.sh)

#### Job \`build\` · leg \`linux_debug\` (agent)

- depends on: —
- condition: —
- runner: [\`stages/010-default/jobs/010-build__linux-debug/run-job.sh\`](stages/010-default/jobs/010-build__linux-debug/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | Report matrix leg | \`CmdLine@2\` | \`exact\` | [\`010-report-matrix-leg.sh\`](stages/010-default/jobs/010-build__linux-debug/steps/010-report-matrix-leg.sh) |
| 020 | Produce output | \`CmdLine@2\` | \`exact\` | [\`020-produce-output.sh\`](stages/010-default/jobs/010-build__linux-debug/steps/020-produce-output.sh) |
| 030 | Job-scoped variable over a matrix variable | \`CmdLine@2\` | \`exact\` | [\`030-job-scoped-variable-over-a-matrix-variable.sh\`](stages/010-default/jobs/010-build__linux-debug/steps/030-job-scoped-variable-over-a-matrix-variable.sh) |

#### Job \`build\` · leg \`linux_release\` (agent)

- depends on: —
- condition: —
- runner: [\`stages/010-default/jobs/010-build__linux-release/run-job.sh\`](stages/010-default/jobs/010-build__linux-release/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | Report matrix leg | \`CmdLine@2\` | \`exact\` | [\`010-report-matrix-leg.sh\`](stages/010-default/jobs/010-build__linux-release/steps/010-report-matrix-leg.sh) |
| 020 | Produce output | \`CmdLine@2\` | \`exact\` | [\`020-produce-output.sh\`](stages/010-default/jobs/010-build__linux-release/steps/020-produce-output.sh) |
| 030 | Job-scoped variable over a matrix variable | \`CmdLine@2\` | \`exact\` | [\`030-job-scoped-variable-over-a-matrix-variable.sh\`](stages/010-default/jobs/010-build__linux-release/steps/030-job-scoped-variable-over-a-matrix-variable.sh) |

#### Job \`build\` · leg \`windows_release\` (agent)

- depends on: —
- condition: —
- runner: [\`stages/010-default/jobs/010-build__windows-release/run-job.sh\`](stages/010-default/jobs/010-build__windows-release/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | Report matrix leg | \`CmdLine@2\` | \`exact\` | [\`010-report-matrix-leg.sh\`](stages/010-default/jobs/010-build__windows-release/steps/010-report-matrix-leg.sh) |
| 020 | Produce output | \`CmdLine@2\` | \`exact\` | [\`020-produce-output.sh\`](stages/010-default/jobs/010-build__windows-release/steps/020-produce-output.sh) |
| 030 | Job-scoped variable over a matrix variable | \`CmdLine@2\` | \`exact\` | [\`030-job-scoped-variable-over-a-matrix-variable.sh\`](stages/010-default/jobs/010-build__windows-release/steps/030-job-scoped-variable-over-a-matrix-variable.sh) |

#### Job \`fanin\` (agent)

- depends on: \`build\`
- condition: \`succeeded()\`
- runner: [\`stages/010-default/jobs/020-fan-in-over-every-matrix-leg/run-job.sh\`](stages/010-default/jobs/020-fan-in-over-every-matrix-leg/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`010-cmdline.sh\`](stages/010-default/jobs/020-fan-in-over-every-matrix-leg/steps/010-cmdline.sh) |

#### Job \`parallel_slices\` (agent)

- depends on: —
- condition: —
- runner: [\`stages/010-default/jobs/030-parallel-slice-strategy__1/run-job.sh\`](stages/010-default/jobs/030-parallel-slice-strategy__1/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`010-cmdline.sh\`](stages/010-default/jobs/030-parallel-slice-strategy__1/steps/010-cmdline.sh) |

#### Job \`parallel_slices\` (agent)

- depends on: —
- condition: —
- runner: [\`stages/010-default/jobs/030-parallel-slice-strategy__2/run-job.sh\`](stages/010-default/jobs/030-parallel-slice-strategy__2/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`010-cmdline.sh\`](stages/010-default/jobs/030-parallel-slice-strategy__2/steps/010-cmdline.sh) |

#### Job \`parallel_slices\` (agent)

- depends on: —
- condition: —
- runner: [\`stages/010-default/jobs/030-parallel-slice-strategy__3/run-job.sh\`](stages/010-default/jobs/030-parallel-slice-strategy__3/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`010-cmdline.sh\`](stages/010-default/jobs/030-parallel-slice-strategy__3/steps/010-cmdline.sh) |


## Fidelity

Every step carries one of these labels, in its script header and in the tables above. There is
no coverage percentage: a label says what *this* step does locally, which is the thing worth
knowing when a run behaves differently from the service.

| Label | Meaning |
| --- | --- |
| \`exact\` | runs verbatim — the same bytes the agent would have run. |
| \`equivalent\` | different implementation, same observable effect. |
| \`degraded\` | runs, but some behavior is approximated on this host. |
| \`stub\` | does not run the real task — the script records the resolved inputs and exits. |
| \`unsupported\` | has no local equivalent; the step cannot be reproduced here. |

## Environment

This pipeline needs no \`.env\` entries beyond the optional ones in [.env.example](.env.example).

## Tool prerequisites

None recorded. Run \`azdo-emu doctor\` against this project to re-check the host.

## Warnings

No warnings: every step converted to a faithful local equivalent.

## Unsupported

Nothing in the original pipeline was dropped as unsupported.
"
`;

exports[`corpus > README golden — '02-artifact-handoff' 1`] = `
"# Converted Azure DevOps pipeline

A local, dependency-free bash rendering of an Azure DevOps pipeline, generated by \`azdo-emu\`.
Every stage, job and step below is a script you can read, edit, and run on its own.

- **Structure:** 2 stages, 3 jobs, 10 step scripts.
- **Expansion:** **service** — expanded by Azure DevOps (pipeline \`42\`, api-version \`7.1-preview.1\`, fresh).
- **Gaps:** 7 entries in [Warnings](#warnings); 0 unsupported constructs.

## Quick start

\`\`\`bash
cp .env.example .env    # then fill it in — see “Environment” below
./run.sh                # run every stage, in dependency order
./run.sh --list         # print the stage/job/step tree with fidelity labels
./run.sh --env-file F   # load F instead of ./.env
./run.sh --resume       # reuse the previous run number and its run directory
\`\`\`

Each run gets \`.work/run-<n>/\` — \`logs/\` per job, \`state/\` for results and output variables, and
\`workspace/\` as the checkout root. Published artifacts land in \`.artifacts/\`.

The per-stage and per-job scripts (\`run-stage.sh\`, \`run-job.sh\`) are sequenced by \`run.sh\` and
read the environment it exports; run them directly only with that environment in place.

See [.env.example](.env.example) for the values this pipeline needs.

## Pipeline

### Stage \`build\`

- depends on: —
- condition: —
- runner: [\`stages/010-build-and-publish/run-stage.sh\`](stages/010-build-and-publish/run-stage.sh)

#### Job \`compile\` (agent)

- depends on: —
- condition: —
- runner: [\`stages/010-build-and-publish/jobs/010-compile/run-job.sh\`](stages/010-build-and-publish/jobs/010-compile/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | 6d15af64-176c-496d-b583-fd2ae21d4df4 | \`checkout-self\` | \`stub\` | [\`010-checkout-self.sh\`](stages/010-build-and-publish/jobs/010-compile/steps/010-checkout-self.sh) |
| 020 | Stage build output | \`CmdLine@2\` | \`exact\` | [\`020-stage-build-output.sh\`](stages/010-build-and-publish/jobs/010-compile/steps/020-stage-build-output.sh) |
| 030 | Copy config next to the binary | \`CopyFiles@2\` | \`stub\` | [\`030-copy-config-next-to-the-binary.sh\`](stages/010-build-and-publish/jobs/010-compile/steps/030-copy-config-next-to-the-binary.sh) |
| 040 | Publish app artifact | \`PublishPipelineArtifact@1\` | \`stub\` | [\`040-publish-app-artifact.sh\`](stages/010-build-and-publish/jobs/010-compile/steps/040-publish-app-artifact.sh) |

#### Job \`docs\` (agent)

- depends on: —
- condition: —
- runner: [\`stages/010-build-and-publish/jobs/020-docs/run-job.sh\`](stages/010-build-and-publish/jobs/020-docs/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | Generate docs | \`CmdLine@2\` | \`exact\` | [\`010-generate-docs.sh\`](stages/010-build-and-publish/jobs/020-docs/steps/010-generate-docs.sh) |
| 020 | ecdc45f6-832d-4ad9-b52b-ee49e94659be | \`publish-docs\` | \`stub\` | [\`020-publish-docs.sh\`](stages/010-build-and-publish/jobs/020-docs/steps/020-publish-docs.sh) |

### Stage \`deploy\`

- depends on: \`build\`
- condition: \`succeeded()\`
- runner: [\`stages/020-consume-artifacts/run-stage.sh\`](stages/020-consume-artifacts/run-stage.sh)

#### Job \`consume\` (agent)

- depends on: —
- condition: —
- runner: [\`stages/020-consume-artifacts/jobs/010-consume/run-job.sh\`](stages/020-consume-artifacts/jobs/010-consume/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | 6d15af64-176c-496d-b583-fd2ae21d4df4 | \`checkout-none\` | \`stub\` | [\`010-checkout-none.sh\`](stages/020-consume-artifacts/jobs/010-consume/steps/010-checkout-none.sh) |
| 020 | Download only the binary | \`30f35852-3f7e-4c0c-9a88-e127b4f97211@1\` | \`stub\` | [\`020-download-only-the-binary.sh\`](stages/020-consume-artifacts/jobs/010-consume/steps/020-download-only-the-binary.sh) |
| 030 | Download docs to an explicit path | \`DownloadPipelineArtifact@2\` | \`stub\` | [\`030-download-docs-to-an-explicit-path.sh\`](stages/020-consume-artifacts/jobs/010-consume/steps/030-download-docs-to-an-explicit-path.sh) |
| 040 | Assert both artifacts landed | \`CmdLine@2\` | \`exact\` | [\`040-assert-both-artifacts-landed.sh\`](stages/020-consume-artifacts/jobs/010-consume/steps/040-assert-both-artifacts-landed.sh) |


## Fidelity

Every step carries one of these labels, in its script header and in the tables above. There is
no coverage percentage: a label says what *this* step does locally, which is the thing worth
knowing when a run behaves differently from the service.

| Label | Meaning |
| --- | --- |
| \`exact\` | runs verbatim — the same bytes the agent would have run. |
| \`equivalent\` | different implementation, same observable effect. |
| \`degraded\` | runs, but some behavior is approximated on this host. |
| \`stub\` | does not run the real task — the script records the resolved inputs and exits. |
| \`unsupported\` | has no local equivalent; the step cannot be reproduced here. |

## Environment

This pipeline needs no \`.env\` entries beyond the optional ones in [.env.example](.env.example).

## Tool prerequisites

None recorded. Run \`azdo-emu doctor\` against this project to re-check the host.

## Warnings

Ranked worst-first. Each entry says where the gap is, what the step is, how faithful it is,
and what to do about it.

1. **stages/010-build-and-publish/jobs/010-compile/steps/010-checkout-self.sh** — \`checkout-self\` · \`stub\`
   does not run the real task — the script records the resolved inputs and exits.
   → Supply a handler for this task or run the step by hand; \`azdo-emu doctor\` lists the gaps.
2. **stages/010-build-and-publish/jobs/010-compile/steps/030-copy-config-next-to-the-binary.sh** — \`CopyFiles@2\` · \`stub\`
   does not run the real task — the script records the resolved inputs and exits.
   → Supply a handler for this task or run the step by hand; \`azdo-emu doctor\` lists the gaps.
3. **stages/010-build-and-publish/jobs/010-compile/steps/040-publish-app-artifact.sh** — \`PublishPipelineArtifact@1\` · \`stub\`
   does not run the real task — the script records the resolved inputs and exits.
   → Supply a handler for this task or run the step by hand; \`azdo-emu doctor\` lists the gaps.
4. **stages/010-build-and-publish/jobs/020-docs/steps/020-publish-docs.sh** — \`publish-docs\` · \`stub\`
   does not run the real task — the script records the resolved inputs and exits.
   → Supply a handler for this task or run the step by hand; \`azdo-emu doctor\` lists the gaps.
5. **stages/020-consume-artifacts/jobs/010-consume/steps/010-checkout-none.sh** — \`checkout-none\` · \`stub\`
   does not run the real task — the script records the resolved inputs and exits.
   → Supply a handler for this task or run the step by hand; \`azdo-emu doctor\` lists the gaps.
6. **stages/020-consume-artifacts/jobs/010-consume/steps/020-download-only-the-binary.sh** — \`30f35852-3f7e-4c0c-9a88-e127b4f97211@1\` · \`stub\`
   does not run the real task — the script records the resolved inputs and exits.
   → Supply a handler for this task or run the step by hand; \`azdo-emu doctor\` lists the gaps.
7. **stages/020-consume-artifacts/jobs/010-consume/steps/030-download-docs-to-an-explicit-path.sh** — \`DownloadPipelineArtifact@2\` · \`stub\`
   does not run the real task — the script records the resolved inputs and exits.
   → Supply a handler for this task or run the step by hand; \`azdo-emu doctor\` lists the gaps.

## Unsupported

Nothing in the original pipeline was dropped as unsupported.
"
`;

exports[`corpus > README golden — '03-dependencies-and-conditions' 1`] = `
"# Converted Azure DevOps pipeline

A local, dependency-free bash rendering of an Azure DevOps pipeline, generated by \`azdo-emu\`.
Every stage, job and step below is a script you can read, edit, and run on its own.

- **Structure:** 3 stages, 5 jobs, 12 step scripts.
- **Expansion:** **service** — expanded by Azure DevOps (pipeline \`42\`, api-version \`7.1-preview.1\`, fresh).
- **Gaps:** 0 entries in [Warnings](#warnings); 0 unsupported constructs.

## Quick start

\`\`\`bash
cp .env.example .env    # then fill it in — see “Environment” below
./run.sh                # run every stage, in dependency order
./run.sh --list         # print the stage/job/step tree with fidelity labels
./run.sh --env-file F   # load F instead of ./.env
./run.sh --resume       # reuse the previous run number and its run directory
\`\`\`

Each run gets \`.work/run-<n>/\` — \`logs/\` per job, \`state/\` for results and output variables, and
\`workspace/\` as the checkout root. Published artifacts land in \`.artifacts/\`.

The per-stage and per-job scripts (\`run-stage.sh\`, \`run-job.sh\`) are sequenced by \`run.sh\` and
read the environment it exports; run them directly only with that environment in place.

See [.env.example](.env.example) for the values this pipeline needs.

## Pipeline

### Stage \`probe\`

- depends on: —
- condition: —
- runner: [\`stages/010-probe/run-stage.sh\`](stages/010-probe/run-stage.sh)

#### Job \`detect\` (agent)

- depends on: —
- condition: —
- runner: [\`stages/010-probe/jobs/010-detect/run-job.sh\`](stages/010-probe/jobs/010-detect/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | Detect what changed | \`Bash@3\` | \`exact\` | [\`010-detect-what-changed.sh\`](stages/010-probe/jobs/010-detect/steps/010-detect-what-changed.sh) |
| 020 | Job-local variable | \`Bash@3\` | \`exact\` | [\`020-job-local-variable.sh\`](stages/010-probe/jobs/010-detect/steps/020-job-local-variable.sh) |
| 030 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`030-cmdline.sh\`](stages/010-probe/jobs/010-detect/steps/030-cmdline.sh) |

### Stage \`build\`

- depends on: \`probe\`
- condition: —
- runner: [\`stages/020-build/run-stage.sh\`](stages/020-build/run-stage.sh)

#### Job \`api\` (agent)

- depends on: —
- condition: \`eq(variables.apiChanged, 'true')\`
- runner: [\`stages/020-build/jobs/010-api/run-job.sh\`](stages/020-build/jobs/010-api/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`010-cmdline.sh\`](stages/020-build/jobs/010-api/steps/010-cmdline.sh) |
| 020 | Bash | \`Bash@3\` | \`exact\` | [\`020-bash.sh\`](stages/020-build/jobs/010-api/steps/020-bash.sh) |

#### Job \`web\` (agent)

- depends on: —
- condition: \`eq(stageDependencies.probe.detect.outputs['flags.changedWeb'], 'true')\`
- runner: [\`stages/020-build/jobs/020-web/run-job.sh\`](stages/020-build/jobs/020-web/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`010-cmdline.sh\`](stages/020-build/jobs/020-web/steps/010-cmdline.sh) |

#### Job \`summary\` (agent)

- depends on: \`api\`, \`web\`
- condition: \`not(failed())\`
- runner: [\`stages/020-build/jobs/030-summary/run-job.sh\`](stages/020-build/jobs/030-summary/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`010-cmdline.sh\`](stages/020-build/jobs/030-summary/steps/010-cmdline.sh) |
| 020 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`020-cmdline.sh\`](stages/020-build/jobs/030-summary/steps/020-cmdline.sh) |
| 030 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`030-cmdline.sh\`](stages/020-build/jobs/030-summary/steps/030-cmdline.sh) |
| 040 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`040-cmdline.sh\`](stages/020-build/jobs/030-summary/steps/040-cmdline.sh) |

### Stage \`report\`

- depends on: \`probe\`, \`build\`
- condition: \`and(
  succeeded('build'),
  eq(dependencies.probe.result, 'Succeeded')
)
\`
- runner: [\`stages/030-report/run-stage.sh\`](stages/030-report/run-stage.sh)

#### Job \`publish_report\` (agent)

- depends on: —
- condition: —
- runner: [\`stages/030-report/jobs/010-publish-report/run-job.sh\`](stages/030-report/jobs/010-publish-report/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`010-cmdline.sh\`](stages/030-report/jobs/010-publish-report/steps/010-cmdline.sh) |
| 020 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`020-cmdline.sh\`](stages/030-report/jobs/010-publish-report/steps/020-cmdline.sh) |


## Fidelity

Every step carries one of these labels, in its script header and in the tables above. There is
no coverage percentage: a label says what *this* step does locally, which is the thing worth
knowing when a run behaves differently from the service.

| Label | Meaning |
| --- | --- |
| \`exact\` | runs verbatim — the same bytes the agent would have run. |
| \`equivalent\` | different implementation, same observable effect. |
| \`degraded\` | runs, but some behavior is approximated on this host. |
| \`stub\` | does not run the real task — the script records the resolved inputs and exits. |
| \`unsupported\` | has no local equivalent; the step cannot be reproduced here. |

## Environment

This pipeline needs no \`.env\` entries beyond the optional ones in [.env.example](.env.example).

## Tool prerequisites

None recorded. Run \`azdo-emu doctor\` against this project to re-check the host.

## Warnings

No warnings: every step converted to a faithful local equivalent.

## Unsupported

Nothing in the original pipeline was dropped as unsupported.
"
`;

exports[`corpus > README golden — '04-variable-layers' 1`] = `
"# $(BuildDefinitionName)_$(Date:yyyyMMdd)$(Rev:.r)

A local, dependency-free bash rendering of an Azure DevOps pipeline, generated by \`azdo-emu\`.
Every stage, job and step below is a script you can read, edit, and run on its own.

- **Structure:** 1 stage, 2 jobs, 10 step scripts.
- **Expansion:** **service** — expanded by Azure DevOps (pipeline \`42\`, api-version \`7.1-preview.1\`, fresh).
- **Gaps:** 0 entries in [Warnings](#warnings); 0 unsupported constructs.

**Baked parameters** — the values the expansion was performed with:

| Parameter | Value |
| --- | --- |
| \`environmentName\` | \`staging\` |

## Quick start

\`\`\`bash
cp .env.example .env    # then fill it in — see “Environment” below
./run.sh                # run every stage, in dependency order
./run.sh --list         # print the stage/job/step tree with fidelity labels
./run.sh --env-file F   # load F instead of ./.env
./run.sh --resume       # reuse the previous run number and its run directory
\`\`\`

Each run gets \`.work/run-<n>/\` — \`logs/\` per job, \`state/\` for results and output variables, and
\`workspace/\` as the checkout root. Published artifacts land in \`.artifacts/\`.

The per-stage and per-job scripts (\`run-stage.sh\`, \`run-job.sh\`) are sequenced by \`run.sh\` and
read the environment it exports; run them directly only with that environment in place.

See [.env.example](.env.example) for the values this pipeline needs.

## Pipeline

### Stage \`main\`

- depends on: —
- condition: —
- runner: [\`stages/010-main/run-stage.sh\`](stages/010-main/run-stage.sh)

#### Job \`layers\` (agent)

- depends on: —
- condition: —
- runner: [\`stages/010-main/jobs/010-layers/run-job.sh\`](stages/010-main/jobs/010-layers/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | Job layer wins over pipeline layer | \`CmdLine@2\` | \`exact\` | [\`010-job-layer-wins-over-pipeline-layer.sh\`](stages/010-main/jobs/010-layers/steps/010-job-layer-wins-over-pipeline-layer.sh) |
| 020 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`020-cmdline.sh\`](stages/010-main/jobs/010-layers/steps/020-cmdline.sh) |
| 030 | Runtime expression variable | \`CmdLine@2\` | \`exact\` | [\`030-runtime-expression-variable.sh\`](stages/010-main/jobs/010-layers/steps/030-runtime-expression-variable.sh) |
| 040 | Compile-time read sees the pipeline-level value | \`CmdLine@2\` | \`exact\` | [\`040-compile-time-read-sees-the-pipeline-level-value.sh\`](stages/010-main/jobs/010-layers/steps/040-compile-time-read-sees-the-pipeline-level-value.sh) |
| 050 | Macro escaping next to a real macro | \`CmdLine@2\` | \`exact\` | [\`050-macro-escaping-next-to-a-real-macro.sh\`](stages/010-main/jobs/010-layers/steps/050-macro-escaping-next-to-a-real-macro.sh) |
| 060 | Variables as environment variables | \`Bash@3\` | \`exact\` | [\`060-variables-as-environment-variables.sh\`](stages/010-main/jobs/010-layers/steps/060-variables-as-environment-variables.sh) |
| 070 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`070-cmdline.sh\`](stages/010-main/jobs/010-layers/steps/070-cmdline.sh) |
| 080 | Set a variable mid-job | \`Bash@3\` | \`exact\` | [\`080-set-a-variable-mid-job.sh\`](stages/010-main/jobs/010-layers/steps/080-set-a-variable-mid-job.sh) |
| 090 | Read it in a later step | \`CmdLine@2\` | \`exact\` | [\`090-read-it-in-a-later-step.sh\`](stages/010-main/jobs/010-layers/steps/090-read-it-in-a-later-step.sh) |

#### Job \`settable\` (agent)

- depends on: —
- condition: —
- runner: [\`stages/010-main/jobs/020-settable/run-job.sh\`](stages/010-main/jobs/020-settable/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`010-cmdline.sh\`](stages/010-main/jobs/020-settable/steps/010-cmdline.sh) |


## Fidelity

Every step carries one of these labels, in its script header and in the tables above. There is
no coverage percentage: a label says what *this* step does locally, which is the thing worth
knowing when a run behaves differently from the service.

| Label | Meaning |
| --- | --- |
| \`exact\` | runs verbatim — the same bytes the agent would have run. |
| \`equivalent\` | different implementation, same observable effect. |
| \`degraded\` | runs, but some behavior is approximated on this host. |
| \`stub\` | does not run the real task — the script records the resolved inputs and exits. |
| \`unsupported\` | has no local equivalent; the step cannot be reproduced here. |

## Environment

This pipeline needs no \`.env\` entries beyond the optional ones in [.env.example](.env.example).

## Tool prerequisites

None recorded. Run \`azdo-emu doctor\` against this project to re-check the host.

## Warnings

No warnings: every step converted to a faithful local equivalent.

## Unsupported

Nothing in the original pipeline was dropped as unsupported.
"
`;

exports[`corpus > README golden — '05-steps-template-nested' 1`] = `
"# Converted Azure DevOps pipeline

A local, dependency-free bash rendering of an Azure DevOps pipeline, generated by \`azdo-emu\`.
Every stage, job and step below is a script you can read, edit, and run on its own.

- **Structure:** 1 stage, 2 jobs, 8 step scripts.
- **Expansion:** **service** — expanded by Azure DevOps (pipeline \`42\`, api-version \`7.1-preview.1\`, fresh).
- **Gaps:** 1 entry in [Warnings](#warnings); 0 unsupported constructs.

**Baked parameters** — the values the expansion was performed with:

| Parameter | Value |
| --- | --- |
| \`runTests\` | \`true\` |

## Quick start

\`\`\`bash
cp .env.example .env    # then fill it in — see “Environment” below
./run.sh                # run every stage, in dependency order
./run.sh --list         # print the stage/job/step tree with fidelity labels
./run.sh --env-file F   # load F instead of ./.env
./run.sh --resume       # reuse the previous run number and its run directory
\`\`\`

Each run gets \`.work/run-<n>/\` — \`logs/\` per job, \`state/\` for results and output variables, and
\`workspace/\` as the checkout root. Published artifacts land in \`.artifacts/\`.

The per-stage and per-job scripts (\`run-stage.sh\`, \`run-job.sh\`) are sequenced by \`run.sh\` and
read the environment it exports; run them directly only with that environment in place.

See [.env.example](.env.example) for the values this pipeline needs.

## Pipeline

### Stage \`__default\`

- depends on: —
- condition: —
- runner: [\`stages/010-default/run-stage.sh\`](stages/010-default/run-stage.sh)

#### Job \`build\` (agent)

- depends on: —
- condition: —
- runner: [\`stages/010-default/jobs/010-build/run-job.sh\`](stages/010-default/jobs/010-build/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | Restore | \`CmdLine@2\` | \`exact\` | [\`010-restore.sh\`](stages/010-default/jobs/010-build/steps/010-restore.sh) |
| 020 | Build src/app | \`CmdLine@2\` | \`exact\` | [\`020-build-src-app.sh\`](stages/010-default/jobs/010-build/steps/020-build-src-app.sh) |
| 030 | Build src/lib | \`CmdLine@2\` | \`exact\` | [\`030-build-src-lib.sh\`](stages/010-default/jobs/010-build/steps/030-build-src-lib.sh) |
| 040 | Test Release | \`CmdLine@2\` | \`exact\` | [\`040-test-release.sh\`](stages/010-default/jobs/010-build/steps/040-test-release.sh) |
| 050 | Publish test results | \`PublishTestResults@2\` | \`stub\` | [\`050-publish-test-results.sh\`](stages/010-default/jobs/010-build/steps/050-publish-test-results.sh) |
| 060 | After the templates | \`CmdLine@2\` | \`exact\` | [\`060-after-the-templates.sh\`](stages/010-default/jobs/010-build/steps/060-after-the-templates.sh) |

#### Job \`reuse\` (agent)

- depends on: —
- condition: —
- runner: [\`stages/010-default/jobs/020-reuse/run-job.sh\`](stages/010-default/jobs/020-reuse/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | Build src/app | \`CmdLine@2\` | \`exact\` | [\`010-build-src-app.sh\`](stages/010-default/jobs/020-reuse/steps/010-build-src-app.sh) |
| 020 | Tests disabled | \`CmdLine@2\` | \`exact\` | [\`020-tests-disabled.sh\`](stages/010-default/jobs/020-reuse/steps/020-tests-disabled.sh) |


## Fidelity

Every step carries one of these labels, in its script header and in the tables above. There is
no coverage percentage: a label says what *this* step does locally, which is the thing worth
knowing when a run behaves differently from the service.

| Label | Meaning |
| --- | --- |
| \`exact\` | runs verbatim — the same bytes the agent would have run. |
| \`equivalent\` | different implementation, same observable effect. |
| \`degraded\` | runs, but some behavior is approximated on this host. |
| \`stub\` | does not run the real task — the script records the resolved inputs and exits. |
| \`unsupported\` | has no local equivalent; the step cannot be reproduced here. |

## Environment

This pipeline needs no \`.env\` entries beyond the optional ones in [.env.example](.env.example).

## Tool prerequisites

None recorded. Run \`azdo-emu doctor\` against this project to re-check the host.

## Warnings

Ranked worst-first. Each entry says where the gap is, what the step is, how faithful it is,
and what to do about it.

1. **stages/010-default/jobs/010-build/steps/050-publish-test-results.sh** — \`PublishTestResults@2\` · \`stub\`
   does not run the real task — the script records the resolved inputs and exits.
   → Supply a handler for this task or run the step by hand; \`azdo-emu doctor\` lists the gaps.

## Unsupported

Nothing in the original pipeline was dropped as unsupported.
"
`;

exports[`corpus > README golden — '06-extends-each-joblist' 1`] = `
"# Converted Azure DevOps pipeline

A local, dependency-free bash rendering of an Azure DevOps pipeline, generated by \`azdo-emu\`.
Every stage, job and step below is a script you can read, edit, and run on its own.

- **Structure:** 3 stages, 4 jobs, 9 step scripts.
- **Expansion:** **service** — expanded by Azure DevOps (pipeline \`42\`, api-version \`7.1-preview.1\`, fresh).
- **Gaps:** 0 entries in [Warnings](#warnings); 0 unsupported constructs.

## Quick start

\`\`\`bash
cp .env.example .env    # then fill it in — see “Environment” below
./run.sh                # run every stage, in dependency order
./run.sh --list         # print the stage/job/step tree with fidelity labels
./run.sh --env-file F   # load F instead of ./.env
./run.sh --resume       # reuse the previous run number and its run directory
\`\`\`

Each run gets \`.work/run-<n>/\` — \`logs/\` per job, \`state/\` for results and output variables, and
\`workspace/\` as the checkout root. Published artifacts land in \`.artifacts/\`.

The per-stage and per-job scripts (\`run-stage.sh\`, \`run-job.sh\`) are sequenced by \`run.sh\` and
read the environment it exports; run them directly only with that environment in place.

See [.env.example](.env.example) for the values this pipeline needs.

## Pipeline

### Stage \`build\`

- depends on: —
- condition: —
- runner: [\`stages/010-build-governed/run-stage.sh\`](stages/010-build-governed/run-stage.sh)

#### Job \`api\` (agent)

- depends on: —
- condition: —
- runner: [\`stages/010-build-governed/jobs/010-build-the-api/run-job.sh\`](stages/010-build-governed/jobs/010-build-the-api/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | Mandated pre-step | \`CmdLine@2\` | \`exact\` | [\`010-mandated-pre-step.sh\`](stages/010-build-governed/jobs/010-build-the-api/steps/010-mandated-pre-step.sh) |
| 020 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`020-cmdline.sh\`](stages/010-build-governed/jobs/010-build-the-api/steps/020-cmdline.sh) |
| 030 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`030-cmdline.sh\`](stages/010-build-governed/jobs/010-build-the-api/steps/030-cmdline.sh) |
| 040 | Scan api | \`CmdLine@2\` | \`exact\` | [\`040-scan-api.sh\`](stages/010-build-governed/jobs/010-build-the-api/steps/040-scan-api.sh) |

#### Job \`web\` (agent)

- depends on: \`api\`
- condition: —
- runner: [\`stages/010-build-governed/jobs/020-build-the-web-app/run-job.sh\`](stages/010-build-governed/jobs/020-build-the-web-app/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | Mandated pre-step | \`CmdLine@2\` | \`exact\` | [\`010-mandated-pre-step.sh\`](stages/010-build-governed/jobs/020-build-the-web-app/steps/010-mandated-pre-step.sh) |
| 020 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`020-cmdline.sh\`](stages/010-build-governed/jobs/020-build-the-web-app/steps/020-cmdline.sh) |
| 030 | Scan web | \`CmdLine@2\` | \`exact\` | [\`030-scan-web.sh\`](stages/010-build-governed/jobs/020-build-the-web-app/steps/030-scan-web.sh) |

### Stage \`deploy_staging\`

- depends on: \`build\`
- condition: —
- runner: [\`stages/020-deploy-to-staging/run-stage.sh\`](stages/020-deploy-to-staging/run-stage.sh)

#### Job \`deploy\` (agent)

- depends on: —
- condition: —
- runner: [\`stages/020-deploy-to-staging/jobs/010-deploy/run-job.sh\`](stages/020-deploy-to-staging/jobs/010-deploy/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`010-cmdline.sh\`](stages/020-deploy-to-staging/jobs/010-deploy/steps/010-cmdline.sh) |

### Stage \`deploy_production\`

- depends on: \`build\`
- condition: \`and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))\`
- runner: [\`stages/030-deploy-to-production/run-stage.sh\`](stages/030-deploy-to-production/run-stage.sh)

#### Job \`deploy\` (agent)

- depends on: —
- condition: —
- runner: [\`stages/030-deploy-to-production/jobs/010-deploy/run-job.sh\`](stages/030-deploy-to-production/jobs/010-deploy/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`010-cmdline.sh\`](stages/030-deploy-to-production/jobs/010-deploy/steps/010-cmdline.sh) |


## Fidelity

Every step carries one of these labels, in its script header and in the tables above. There is
no coverage percentage: a label says what *this* step does locally, which is the thing worth
knowing when a run behaves differently from the service.

| Label | Meaning |
| --- | --- |
| \`exact\` | runs verbatim — the same bytes the agent would have run. |
| \`equivalent\` | different implementation, same observable effect. |
| \`degraded\` | runs, but some behavior is approximated on this host. |
| \`stub\` | does not run the real task — the script records the resolved inputs and exits. |
| \`unsupported\` | has no local equivalent; the step cannot be reproduced here. |

## Environment

This pipeline needs no \`.env\` entries beyond the optional ones in [.env.example](.env.example).

## Tool prerequisites

None recorded. Run \`azdo-emu doctor\` against this project to re-check the host.

## Warnings

No warnings: every step converted to a faithful local equivalent.

## Unsupported

Nothing in the original pipeline was dropped as unsupported.
"
`;

exports[`corpus > README golden — '07-template-parameter-types' 1`] = `
"# Converted Azure DevOps pipeline

A local, dependency-free bash rendering of an Azure DevOps pipeline, generated by \`azdo-emu\`.
Every stage, job and step below is a script you can read, edit, and run on its own.

- **Structure:** 1 stage, 2 jobs, 15 step scripts.
- **Expansion:** **service** — expanded by Azure DevOps (pipeline \`42\`, api-version \`7.1-preview.1\`, fresh).
- **Gaps:** 0 entries in [Warnings](#warnings); 0 unsupported constructs.

**Baked parameters** — the values the expansion was performed with:

| Parameter | Value |
| --- | --- |
| \`imageName\` | \`ubuntu-latest\` |
| \`retries\` | \`2\` |
| \`verbose\` | \`false\` |
| \`settings\` | — |
| \`customStep\` | — |
| \`extraSteps\` | — |

## Quick start

\`\`\`bash
cp .env.example .env    # then fill it in — see “Environment” below
./run.sh                # run every stage, in dependency order
./run.sh --list         # print the stage/job/step tree with fidelity labels
./run.sh --env-file F   # load F instead of ./.env
./run.sh --resume       # reuse the previous run number and its run directory
\`\`\`

Each run gets \`.work/run-<n>/\` — \`logs/\` per job, \`state/\` for results and output variables, and
\`workspace/\` as the checkout root. Published artifacts land in \`.artifacts/\`.

The per-stage and per-job scripts (\`run-stage.sh\`, \`run-job.sh\`) are sequenced by \`run.sh\` and
read the environment it exports; run them directly only with that environment in place.

See [.env.example](.env.example) for the values this pipeline needs.

## Pipeline

### Stage \`__default\`

- depends on: —
- condition: —
- runner: [\`stages/010-default/run-stage.sh\`](stages/010-default/run-stage.sh)

#### Job \`typed_default\` (agent)

- depends on: —
- condition: —
- runner: [\`stages/010-default/jobs/010-typed-parameters-default/run-job.sh\`](stages/010-default/jobs/010-typed-parameters-default/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | Scalars survive their types | \`CmdLine@2\` | \`exact\` | [\`010-scalars-survive-their-types.sh\`](stages/010-default/jobs/010-typed-parameters-default/steps/010-scalars-survive-their-types.sh) |
| 020 | Object parameter indexed by path | \`CmdLine@2\` | \`exact\` | [\`020-object-parameter-indexed-by-path.sh\`](stages/010-default/jobs/010-typed-parameters-default/steps/020-object-parameter-indexed-by-path.sh) |
| 030 | Tag fast | \`CmdLine@2\` | \`exact\` | [\`030-tag-fast.sh\`](stages/010-default/jobs/010-typed-parameters-default/steps/030-tag-fast.sh) |
| 040 | Tag smoke | \`CmdLine@2\` | \`exact\` | [\`040-tag-smoke.sh\`](stages/010-default/jobs/010-typed-parameters-default/steps/040-tag-smoke.sh) |
| 050 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`050-cmdline.sh\`](stages/010-default/jobs/010-typed-parameters-default/steps/050-cmdline.sh) |
| 060 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`060-cmdline.sh\`](stages/010-default/jobs/010-typed-parameters-default/steps/060-cmdline.sh) |
| 070 | Bash | \`Bash@3\` | \`exact\` | [\`070-bash.sh\`](stages/010-default/jobs/010-typed-parameters-default/steps/070-bash.sh) |
| 080 | Functions over parameter collections | \`CmdLine@2\` | \`exact\` | [\`080-functions-over-parameter-collections.sh\`](stages/010-default/jobs/010-typed-parameters-default/steps/080-functions-over-parameter-collections.sh) |

#### Job \`typed_overridden\` (agent)

- depends on: —
- condition: —
- runner: [\`stages/010-default/jobs/020-typed-parameters-overridden/run-job.sh\`](stages/010-default/jobs/020-typed-parameters-overridden/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | Scalars survive their types | \`CmdLine@2\` | \`exact\` | [\`010-scalars-survive-their-types.sh\`](stages/010-default/jobs/020-typed-parameters-overridden/steps/010-scalars-survive-their-types.sh) |
| 020 | Truthiness of a boolean parameter | \`CmdLine@2\` | \`exact\` | [\`020-truthiness-of-a-boolean-parameter.sh\`](stages/010-default/jobs/020-typed-parameters-overridden/steps/020-truthiness-of-a-boolean-parameter.sh) |
| 030 | Object parameter indexed by path | \`CmdLine@2\` | \`exact\` | [\`030-object-parameter-indexed-by-path.sh\`](stages/010-default/jobs/020-typed-parameters-overridden/steps/030-object-parameter-indexed-by-path.sh) |
| 040 | Tag slow | \`CmdLine@2\` | \`exact\` | [\`040-tag-slow.sh\`](stages/010-default/jobs/020-typed-parameters-overridden/steps/040-tag-slow.sh) |
| 050 | Passed as a task step | \`CmdLine@2\` | \`exact\` | [\`050-passed-as-a-task-step.sh\`](stages/010-default/jobs/020-typed-parameters-overridden/steps/050-passed-as-a-task-step.sh) |
| 060 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`060-cmdline.sh\`](stages/010-default/jobs/020-typed-parameters-overridden/steps/060-cmdline.sh) |
| 070 | Functions over parameter collections | \`CmdLine@2\` | \`exact\` | [\`070-functions-over-parameter-collections.sh\`](stages/010-default/jobs/020-typed-parameters-overridden/steps/070-functions-over-parameter-collections.sh) |


## Fidelity

Every step carries one of these labels, in its script header and in the tables above. There is
no coverage percentage: a label says what *this* step does locally, which is the thing worth
knowing when a run behaves differently from the service.

| Label | Meaning |
| --- | --- |
| \`exact\` | runs verbatim — the same bytes the agent would have run. |
| \`equivalent\` | different implementation, same observable effect. |
| \`degraded\` | runs, but some behavior is approximated on this host. |
| \`stub\` | does not run the real task — the script records the resolved inputs and exits. |
| \`unsupported\` | has no local equivalent; the step cannot be reproduced here. |

## Environment

This pipeline needs no \`.env\` entries beyond the optional ones in [.env.example](.env.example).

## Tool prerequisites

None recorded. Run \`azdo-emu doctor\` against this project to re-check the host.

## Warnings

No warnings: every step converted to a faithful local equivalent.

## Unsupported

Nothing in the original pipeline was dropped as unsupported.
"
`;

exports[`corpus > README golden — '08-deployment-runonce' 1`] = `
"# Converted Azure DevOps pipeline

A local, dependency-free bash rendering of an Azure DevOps pipeline, generated by \`azdo-emu\`.
Every stage, job and step below is a script you can read, edit, and run on its own.

- **Structure:** 3 stages, 4 jobs, 12 step scripts.
- **Expansion:** **service** — expanded by Azure DevOps (pipeline \`42\`, api-version \`7.1-preview.1\`, fresh).
- **Gaps:** 2 entries in [Warnings](#warnings); 0 unsupported constructs.

## Quick start

\`\`\`bash
cp .env.example .env    # then fill it in — see “Environment” below
./run.sh                # run every stage, in dependency order
./run.sh --list         # print the stage/job/step tree with fidelity labels
./run.sh --env-file F   # load F instead of ./.env
./run.sh --resume       # reuse the previous run number and its run directory
\`\`\`

Each run gets \`.work/run-<n>/\` — \`logs/\` per job, \`state/\` for results and output variables, and
\`workspace/\` as the checkout root. Published artifacts land in \`.artifacts/\`.

The per-stage and per-job scripts (\`run-stage.sh\`, \`run-job.sh\`) are sequenced by \`run.sh\` and
read the environment it exports; run them directly only with that environment in place.

See [.env.example](.env.example) for the values this pipeline needs.

## Pipeline

### Stage \`build\`

- depends on: —
- condition: —
- runner: [\`stages/010-build/run-stage.sh\`](stages/010-build/run-stage.sh)

#### Job \`package\` (agent)

- depends on: —
- condition: —
- runner: [\`stages/010-build/jobs/010-package/run-job.sh\`](stages/010-build/jobs/010-package/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | Package | \`CmdLine@2\` | \`exact\` | [\`010-package.sh\`](stages/010-build/jobs/010-package/steps/010-package.sh) |
| 020 | ecdc45f6-832d-4ad9-b52b-ee49e94659be | \`publish-drop\` | \`stub\` | [\`020-publish-drop.sh\`](stages/010-build/jobs/010-package/steps/020-publish-drop.sh) |

### Stage \`deploy_staging\`

- depends on: \`build\`
- condition: —
- runner: [\`stages/020-deploy-to-staging/run-stage.sh\`](stages/020-deploy-to-staging/run-stage.sh)

#### Job \`staging\` (deployment)

- depends on: —
- condition: —
- runner: [\`stages/020-deploy-to-staging/jobs/010-staging-runonce/run-job.sh\`](stages/020-deploy-to-staging/jobs/010-staging-runonce/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | 30f35852-3f7e-4c0c-9a88-e127b4f97211 _(preDeploy)_ | \`download-current\` | \`stub\` | [\`010-download-current.sh\`](stages/020-deploy-to-staging/jobs/010-staging-runonce/steps/010-download-current.sh) |
| 020 | CmdLine _(preDeploy)_ | \`CmdLine@2\` | \`exact\` | [\`020-cmdline.sh\`](stages/020-deploy-to-staging/jobs/010-staging-runonce/steps/020-cmdline.sh) |
| 030 | Deploy to staging _(deploy)_ | \`CmdLine@2\` | \`exact\` | [\`030-deploy-to-staging.sh\`](stages/020-deploy-to-staging/jobs/010-staging-runonce/steps/030-deploy-to-staging.sh) |
| 040 | CmdLine _(deploy)_ | \`CmdLine@2\` | \`exact\` | [\`040-cmdline.sh\`](stages/020-deploy-to-staging/jobs/010-staging-runonce/steps/040-cmdline.sh) |
| 050 | Health check _(deploy)_ | \`CmdLine@2\` | \`exact\` | [\`050-health-check.sh\`](stages/020-deploy-to-staging/jobs/010-staging-runonce/steps/050-health-check.sh) |
| 060 | CmdLine _(routeTraffic)_ | \`CmdLine@2\` | \`exact\` | [\`060-cmdline.sh\`](stages/020-deploy-to-staging/jobs/010-staging-runonce/steps/060-cmdline.sh) |
| 070 | CmdLine _(postRouteTraffic)_ | \`CmdLine@2\` | \`exact\` | [\`070-cmdline.sh\`](stages/020-deploy-to-staging/jobs/010-staging-runonce/steps/070-cmdline.sh) |
| 080 | Rollback _(onFailure)_ | \`CmdLine@2\` | \`exact\` | [\`080-rollback.sh\`](stages/020-deploy-to-staging/jobs/010-staging-runonce/steps/080-rollback.sh) |
| 090 | CmdLine _(onSuccess)_ | \`CmdLine@2\` | \`exact\` | [\`090-cmdline.sh\`](stages/020-deploy-to-staging/jobs/010-staging-runonce/steps/090-cmdline.sh) |

### Stage \`deploy_production\`

- depends on: \`deploy_staging\`
- condition: \`succeeded()\`
- runner: [\`stages/030-deploy-to-production/run-stage.sh\`](stages/030-deploy-to-production/run-stage.sh)

#### Job \`production\` (deployment)

- depends on: —
- condition: —
- runner: [\`stages/030-deploy-to-production/jobs/010-production/run-job.sh\`](stages/030-deploy-to-production/jobs/010-production/run-job.sh)

This job has no steps.

#### Job \`notify\` (agent)

- depends on: \`production\`
- condition: \`always()\`
- runner: [\`stages/030-deploy-to-production/jobs/020-notify/run-job.sh\`](stages/030-deploy-to-production/jobs/020-notify/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`010-cmdline.sh\`](stages/030-deploy-to-production/jobs/020-notify/steps/010-cmdline.sh) |


## Fidelity

Every step carries one of these labels, in its script header and in the tables above. There is
no coverage percentage: a label says what *this* step does locally, which is the thing worth
knowing when a run behaves differently from the service.

| Label | Meaning |
| --- | --- |
| \`exact\` | runs verbatim — the same bytes the agent would have run. |
| \`equivalent\` | different implementation, same observable effect. |
| \`degraded\` | runs, but some behavior is approximated on this host. |
| \`stub\` | does not run the real task — the script records the resolved inputs and exits. |
| \`unsupported\` | has no local equivalent; the step cannot be reproduced here. |

## Environment

This pipeline needs no \`.env\` entries beyond the optional ones in [.env.example](.env.example).

## Tool prerequisites

None recorded. Run \`azdo-emu doctor\` against this project to re-check the host.

## Warnings

Ranked worst-first. Each entry says where the gap is, what the step is, how faithful it is,
and what to do about it.

1. **stages/010-build/jobs/010-package/steps/020-publish-drop.sh** — \`publish-drop\` · \`stub\`
   does not run the real task — the script records the resolved inputs and exits.
   → Supply a handler for this task or run the step by hand; \`azdo-emu doctor\` lists the gaps.
2. **stages/020-deploy-to-staging/jobs/010-staging-runonce/steps/010-download-current.sh** — \`download-current\` · \`stub\`
   does not run the real task — the script records the resolved inputs and exits.
   → Supply a handler for this task or run the step by hand; \`azdo-emu doctor\` lists the gaps.

## Unsupported

Nothing in the original pipeline was dropped as unsupported.
"
`;

exports[`corpus > README golden — '09-multi-checkout' 1`] = `
"# Converted Azure DevOps pipeline

A local, dependency-free bash rendering of an Azure DevOps pipeline, generated by \`azdo-emu\`.
Every stage, job and step below is a script you can read, edit, and run on its own.

- **Structure:** 1 stage, 3 jobs, 7 step scripts.
- **Expansion:** **service** — expanded by Azure DevOps (pipeline \`42\`, api-version \`7.1-preview.1\`, fresh).
- **Gaps:** 3 entries in [Warnings](#warnings); 0 unsupported constructs.

## Quick start

\`\`\`bash
cp .env.example .env    # then fill it in — see “Environment” below
./run.sh                # run every stage, in dependency order
./run.sh --list         # print the stage/job/step tree with fidelity labels
./run.sh --env-file F   # load F instead of ./.env
./run.sh --resume       # reuse the previous run number and its run directory
\`\`\`

Each run gets \`.work/run-<n>/\` — \`logs/\` per job, \`state/\` for results and output variables, and
\`workspace/\` as the checkout root. Published artifacts land in \`.artifacts/\`.

The per-stage and per-job scripts (\`run-stage.sh\`, \`run-job.sh\`) are sequenced by \`run.sh\` and
read the environment it exports; run them directly only with that environment in place.

See [.env.example](.env.example) for the values this pipeline needs.

## Pipeline

### Stage \`__default\`

- depends on: —
- condition: —
- runner: [\`stages/010-default/run-stage.sh\`](stages/010-default/run-stage.sh)

#### Job \`multi_checkout\` (agent)

- depends on: —
- condition: —
- runner: [\`stages/010-default/jobs/010-two-repositories-in-one-workspace/run-job.sh\`](stages/010-default/jobs/010-two-repositories-in-one-workspace/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | 6d15af64-176c-496d-b583-fd2ae21d4df4 | \`checkout-self\` | \`stub\` | [\`010-checkout-self.sh\`](stages/010-default/jobs/010-two-repositories-in-one-workspace/steps/010-checkout-self.sh) |
| 020 | 6d15af64-176c-496d-b583-fd2ae21d4df4 | \`checkout-tools\` | \`stub\` | [\`020-checkout-tools.sh\`](stages/010-default/jobs/010-two-repositories-in-one-workspace/steps/020-checkout-tools.sh) |
| 030 | Both repositories are present | \`CmdLine@2\` | \`exact\` | [\`030-both-repositories-are-present.sh\`](stages/010-default/jobs/010-two-repositories-in-one-workspace/steps/030-both-repositories-are-present.sh) |
| 040 | Cross-repo template step | \`CmdLine@2\` | \`exact\` | [\`040-cross-repo-template-step.sh\`](stages/010-default/jobs/010-two-repositories-in-one-workspace/steps/040-cross-repo-template-step.sh) |

#### Job \`no_checkout\` (agent)

- depends on: \`multi_checkout\`
- condition: —
- runner: [\`stages/010-default/jobs/020-no-sources-at-all/run-job.sh\`](stages/010-default/jobs/020-no-sources-at-all/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | 6d15af64-176c-496d-b583-fd2ae21d4df4 | \`checkout-none\` | \`stub\` | [\`010-checkout-none.sh\`](stages/010-default/jobs/020-no-sources-at-all/steps/010-checkout-none.sh) |
| 020 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`020-cmdline.sh\`](stages/010-default/jobs/020-no-sources-at-all/steps/020-cmdline.sh) |

#### Job \`self_only\` (agent)

- depends on: —
- condition: —
- runner: [\`stages/010-default/jobs/030-implicit-self-checkout/run-job.sh\`](stages/010-default/jobs/030-implicit-self-checkout/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`010-cmdline.sh\`](stages/010-default/jobs/030-implicit-self-checkout/steps/010-cmdline.sh) |


## Fidelity

Every step carries one of these labels, in its script header and in the tables above. There is
no coverage percentage: a label says what *this* step does locally, which is the thing worth
knowing when a run behaves differently from the service.

| Label | Meaning |
| --- | --- |
| \`exact\` | runs verbatim — the same bytes the agent would have run. |
| \`equivalent\` | different implementation, same observable effect. |
| \`degraded\` | runs, but some behavior is approximated on this host. |
| \`stub\` | does not run the real task — the script records the resolved inputs and exits. |
| \`unsupported\` | has no local equivalent; the step cannot be reproduced here. |

## Environment

This pipeline needs no \`.env\` entries beyond the optional ones in [.env.example](.env.example).

## Tool prerequisites

None recorded. Run \`azdo-emu doctor\` against this project to re-check the host.

## Warnings

Ranked worst-first. Each entry says where the gap is, what the step is, how faithful it is,
and what to do about it.

1. **stages/010-default/jobs/010-two-repositories-in-one-workspace/steps/010-checkout-self.sh** — \`checkout-self\` · \`stub\`
   does not run the real task — the script records the resolved inputs and exits.
   → Supply a handler for this task or run the step by hand; \`azdo-emu doctor\` lists the gaps.
2. **stages/010-default/jobs/010-two-repositories-in-one-workspace/steps/020-checkout-tools.sh** — \`checkout-tools\` · \`stub\`
   does not run the real task — the script records the resolved inputs and exits.
   → Supply a handler for this task or run the step by hand; \`azdo-emu doctor\` lists the gaps.
3. **stages/010-default/jobs/020-no-sources-at-all/steps/010-checkout-none.sh** — \`checkout-none\` · \`stub\`
   does not run the real task — the script records the resolved inputs and exits.
   → Supply a handler for this task or run the step by hand; \`azdo-emu doctor\` lists the gaps.

## Unsupported

Nothing in the original pipeline was dropped as unsupported.
"
`;

exports[`corpus > README golden — '10-monorepo-triggers-pools' 1`] = `
"# Converted Azure DevOps pipeline

A local, dependency-free bash rendering of an Azure DevOps pipeline, generated by \`azdo-emu\`.
Every stage, job and step below is a script you can read, edit, and run on its own.

- **Structure:** 1 stage, 3 jobs, 7 step scripts.
- **Expansion:** **service** — expanded by Azure DevOps (pipeline \`42\`, api-version \`7.1-preview.1\`, fresh).
- **Gaps:** 2 entries in [Warnings](#warnings); 0 unsupported constructs.

## Quick start

\`\`\`bash
cp .env.example .env    # then fill it in — see “Environment” below
./run.sh                # run every stage, in dependency order
./run.sh --list         # print the stage/job/step tree with fidelity labels
./run.sh --env-file F   # load F instead of ./.env
./run.sh --resume       # reuse the previous run number and its run directory
\`\`\`

Each run gets \`.work/run-<n>/\` — \`logs/\` per job, \`state/\` for results and output variables, and
\`workspace/\` as the checkout root. Published artifacts land in \`.artifacts/\`.

The per-stage and per-job scripts (\`run-stage.sh\`, \`run-job.sh\`) are sequenced by \`run.sh\` and
read the environment it exports; run them directly only with that environment in place.

See [.env.example](.env.example) for the values this pipeline needs.

## Pipeline

### Stage \`__default\`

- depends on: —
- condition: —
- runner: [\`stages/010-default/run-stage.sh\`](stages/010-default/run-stage.sh)

#### Job \`container_job\` (agent)

- depends on: —
- condition: —
- runner: [\`stages/010-default/jobs/010-job-inside-a-container/run-job.sh\`](stages/010-default/jobs/010-job-inside-a-container/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | Node from the container image | \`CmdLine@2\` | \`exact\` | [\`010-node-from-the-container-image.sh\`](stages/010-default/jobs/010-job-inside-a-container/steps/010-node-from-the-container-image.sh) |
| 020 | Bash | \`Bash@3\` | \`exact\` | [\`020-bash.sh\`](stages/010-default/jobs/010-job-inside-a-container/steps/020-bash.sh) |
| 030 | Bash task with explicit working directory | \`Bash@3\` | \`exact\` | [\`030-bash-task-with-explicit-working-directory.sh\`](stages/010-default/jobs/010-job-inside-a-container/steps/030-bash-task-with-explicit-working-directory.sh) |

#### Job \`demand_job\` (agent)

- depends on: —
- condition: —
- runner: [\`stages/010-default/jobs/020-self-hosted-pool-with-demands/run-job.sh\`](stages/010-default/jobs/020-self-hosted-pool-with-demands/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`010-cmdline.sh\`](stages/010-default/jobs/020-self-hosted-pool-with-demands/steps/010-cmdline.sh) |
| 020 | PowerShell on a Linux agent | \`PowerShell@2\` | \`degraded\` | [\`020-powershell-on-a-linux-agent.sh\`](stages/010-default/jobs/020-self-hosted-pool-with-demands/steps/020-powershell-on-a-linux-agent.sh) |
| 030 | PowerShell task | \`PowerShell@2\` | \`degraded\` | [\`030-powershell-task.sh\`](stages/010-default/jobs/020-self-hosted-pool-with-demands/steps/030-powershell-task.sh) |

#### Job \`services_job\` (agent)

- depends on: —
- condition: —
- runner: [\`stages/010-default/jobs/030-sidecar-service-container/run-job.sh\`](stages/010-default/jobs/030-sidecar-service-container/run-job.sh)

| # | Step | Task | Fidelity | Script |
| --- | --- | --- | --- | --- |
| 010 | CmdLine | \`CmdLine@2\` | \`exact\` | [\`010-cmdline.sh\`](stages/010-default/jobs/030-sidecar-service-container/steps/010-cmdline.sh) |


## Fidelity

Every step carries one of these labels, in its script header and in the tables above. There is
no coverage percentage: a label says what *this* step does locally, which is the thing worth
knowing when a run behaves differently from the service.

| Label | Meaning |
| --- | --- |
| \`exact\` | runs verbatim — the same bytes the agent would have run. |
| \`equivalent\` | different implementation, same observable effect. |
| \`degraded\` | runs, but some behavior is approximated on this host. |
| \`stub\` | does not run the real task — the script records the resolved inputs and exits. |
| \`unsupported\` | has no local equivalent; the step cannot be reproduced here. |

## Environment

This pipeline needs no \`.env\` entries beyond the optional ones in [.env.example](.env.example).

## Tool prerequisites

None recorded. Run \`azdo-emu doctor\` against this project to re-check the host.

## Warnings

Ranked worst-first. Each entry says where the gap is, what the step is, how faithful it is,
and what to do about it.

1. **stages/010-default/jobs/020-self-hosted-pool-with-demands/steps/020-powershell-on-a-linux-agent.sh** — \`PowerShell@2\` · \`degraded\`
   runs, but some behavior is approximated on this host.
   → Install the tool the step needs and re-run; \`azdo-emu doctor\` reports what is missing.
2. **stages/010-default/jobs/020-self-hosted-pool-with-demands/steps/030-powershell-task.sh** — \`PowerShell@2\` · \`degraded\`
   runs, but some behavior is approximated on this host.
   → Install the tool the step needs and re-run; \`azdo-emu doctor\` reports what is missing.

## Unsupported

Nothing in the original pipeline was dropped as unsupported.
"
`;
